welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:8: error: Int.type does not take parameters
  b=Int(a/nums.length)
       ^